# py2max-server

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: info_command_demo.py  inline_repl_verification.py  interactive_demo.py  interactive_save_demo.py  live_preview_demo.py  refresh_function_verification.py  repl_client_server_demo.py  repl_quickstart.py
py2max_server/: __init__.py  __main__.py  cli.py  client.py  inline.py  repl.py  rpc.py  websocket.py
py2max_server/static/: interactive.html  interactive.js
tests/: test_nested_patchers.py  test_repl.py  test_repl_client.py  test_repl_inline.py  test_repl_server.py  test_websocket.py
